# BrokenAllianceDataBase

./: .gitignore  README.md  generate-file-list.cjs  index.html  package-lock.json  package.json
backend/: auth.py  database.py  main.py  pyproject.toml  seed.py  seed_user.py  users.py
backend/models/: lookup.py
backend/src/: app.py  auth.py  db.py  models.py  schemas.py
backend/tests/: conftest.py  test_api.py  test_auth.py
goals-Plan/: Goals.txt  Phase1-Detailed-Plan.md  Spec doc.md
src/: App.jsx  index.css  main.jsx
src/Styles/: AIO.css  AdminDashboard.css  ConstructsPage.css  HomePage.css  LeaderFullpage.css  LeaderPage.css  Login.css  Navbar.css  SorterBar.css  UnitsPage.css  modal.css  unitAndBuilding.css
src/components/: Header.jsx  Navbar.jsx  SorterBar.jsx  modal.jsx  unitAndBuilding.jsx  unitsFrom.jsx
src/contexts/: AuthContext.jsx
src/data/: Abilities.json  Factions.json  LeaderPowers.json  Leaders.json  Meta.json  Units.json  Weapons.json  combined_data.json
src/data/Factions/UDF/: info.json
src/data/Factions/UDF/Leaders/: CommanderHawk.json  IrisQuantum.json  PresidentHawk.json
src/pages/: AdminDashboard.jsx  AllInOne.jsx  Compare.jsx  Constructs.jsx  DetailViewer.jsx  FullLeaderPage.jsx  Home.jsx  Leader.jsx  LeaderDetail.jsx  LeaderDetailPage.jsx  LeaderItem.jsx  Leaders.jsx  Login.jsx  units.jsx
src/services/: Building.json  Factions.json  Leaders.json  Units.json  meta.json
src/services/NewTestData/: Abilities.json  Building.json  Leader.json  Leader_powers.json  Units.json  Weapons.json
